--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ firebase-admin==6.2.0
 # HTTP & API
 requests==2.31.0
 httpx>=0.25.0
+feedparser>=6.0.10
+beautifulsoup4>=4.12.0
 
 # Environment & Configuration
 python-dotenv==1.0.0
